--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
     "core-js": "^3.8.3",
     "element-plus": "^1.0.2-beta.28",
     "vue": "^3.2.13",
