--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@element-plus/icons-vue": "^2.0.6",
     "core-js": "^3.8.3",
     "element-plus": "^1.0.2-beta.28",
+    "path": "^0.12.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
